2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-selection-model.c, e-table-selection-model.h: Replaced
	get_selection_list with foreach.

	* e-table.h: Add a ETableSelectionModel.

2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Added e-table-selection-model.c and
	e-table-selection-model.h.

	* e-table-selection-model.c: Added the get_selection_list and
	is_row_selected functions.  Removed some unused code.

	* e-table-selection-model.h: Removed some unused code.

2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-selection-model.c: Added comments to the bit field code.

	* e-table-selection-model.h: Made the selection data guint32s.

2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-selection-model.c: More fixes.

2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-selection-model.c: Fixed up the bit manipulation a bit
	here.

2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-selection-model.c, e-table-selection-model.h: New files
	for doing a selection model.  Not finished yet and thus not in
	Makefile.am.

	* e-table.c, e-table.h: Renamed the new dnd signals so that they
	won't conflict with the widget signals.

2000-07-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c, e-table.h: Implemented some of the drag & drop code.
	Drops all report as being on row 0, col 0.  Also, automatic drags
	don't set the row and column being dragged from.

2000-07-23  Damon Chaplin  <damon@helixcode.com>

	* e-cell-text.c: added a color_column where the color can be specified
	as a string, e.g. "red" or "rgb:F/0/0".

	* e-cell-text.c (ect_leave_edit): don't call unbuild_current_cell()
	since the CellEdit struct has been freed in ect_stop_editing() and so
	has the text.

	* e-cell-text.c (unbuild_current_cell): set cell->text to NULL to make
	sure we	don't try to free it again.
