@@ -1,5 +1,10 @@
 2000-07-25  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-table-selection-model.c: Made foreach call the callback in top
+	to bottom order.
+
+2000-07-25  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table-selection-model.c, e-table-selection-model.h: Replaced
 	get_selection_list with foreach.
 
